Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2793

conf-sanity 2 failed in DNE test.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6759

      Lustre: DEBUG MARKER: == conf-sanity test 2: start up mds twice (should return err) == 18:00:30 (1385604030)
      LDISKFS-fs (loop0): mounted filesystem with ordered data mode. quota=on. Opts:
      Lustre: lustre-MDT0000: used disk, loading
      Lustre: 6536:0:(mdt_lproc.c:383:lprocfs_wr_identity_upcall()) lustre-MDT0000: identity upcall set to /work/lustre-release/lustre/tests/../utils/l_getidentity
      Lustre: 6536:0:(mdt_lproc.c:383:lprocfs_wr_identity_upcall()) Skipped 1 previous similar message
      LustreError: 137-5: UUID 'lustre-MDT0001_UUID' is not available for connect (no target)
      LustreError: 11-0: lustre-MDT0001-osp-MDT0000: Communicating with 0@lo, operation mds_connect failed with -19.
      LustreError: Skipped 1 previous similar message
      LDISKFS-fs (loop1): mounted filesystem with ordered data mode. quota=on. Opts:
      LustreError: 137-5: UUID 'lustre-MDT0001_UUID' is not available for connect (no target)
      Lustre: 2619:0:(client.c:1866:ptlrpc_expire_one_request()) @@@ Request sent has timed out for slow reply: [sent 1385604030/real 1385604030] req@ffff88007a927c00 x1452910887046512/t0(0) o8->lustre-OST0000-osc-MDT0000@0@lo:28/4 lens 400/544 e 0 to 1 dl 1385604035 ref 1 fl Rpc:XN/0/ffffffff rc 0/-1
      LustreError: 137-5: UUID 'lustre-MDT0001_UUID' is not available for connect (no target)
      LustreError: 137-5: UUID 'lustre-MDT0001_UUID' is not available for connect (no target)
      LustreError: Skipped 1 previous similar message
      Lustre: Layout lock feature supported.
      LustreError: 137-5: UUID 'lustre-MDT0001_UUID' is not available for connect (no target)
      LustreError: Skipped 1 previous similar message
      LustreError: 137-5: UUID 'lustre-MDT0001_UUID' is not available for connect (no target)
      LustreError: Skipped 1 previous similar message
      LustreError: 137-5: UUID 'lustre-MDT0001_UUID' is not available for connect (no target)
      LustreError: Skipped 3 previous similar messages
      LustreError: 11-0: lustre-MDT0001-osp-MDT0000: Communicating with 0@lo, operation mds_connect failed with -19.
      LustreError: Skipped 16 previous similar messages
      LustreError: 137-5: UUID 'lustre-MDT0001_UUID' is not available for connect (no target)

      In turns out that fld lookup(for root seq) request(during mount process) was trying to send to the MDT(MDT1 in this case), which is not being started up at all. So for special seq, we should only send special seq lookup request to MDT0.

      So

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: